# oop-2024-25

./: .gitignore  README.md
exams/example/: README.md
exams/example/src/: CMakeLists.txt  application.cpp  solution.cpp  solution.h
exams/example/test/: CMakeLists.txt  test-additional.cpp  test-solution.cpp
group-5/Week01-UnitTests_TextFiles/: README.md
group-5/Week01-UnitTests_TextFiles/ExampleProblems/: task1_printCommands.cpp  task2_printOwnCode.cpp  task3_sizeOfFile.cpp
group-5/Week01-UnitTests_TextFiles/FilesExample/: fileRead.cpp  fileWrite.cpp  myFile.txt
group-5/Week01-UnitTests_TextFiles/UnitTestsExample/: person.cpp  person.h  testPerson.cpp
group-5/Week02_BinaryFiles/: README.md
group-5/Week02_BinaryFiles/ExampleProblem/: main.cpp  student.cpp  student.h
group-5/Week03_Classes/: README.md  car.cpp  car.h  drive.txt  testCar.cpp
group-5/Week04_Rule-0-3/: person.cpp  person.h
group-5/Week04_Rule-0-3/string/: main.cpp  mystring.cpp  mystring.h
group-5/Week05_Static/: README.md
group-5/Week06_Enums_Exceptions/: README.md  main.cpp  pizza.cpp  pizza.hpp  pizzaMaker.cpp  pizzaMaker.hpp  testPizzaMaking.cpp
group-5/Week07_Vector/src/: main.cpp  vector.cpp  vector.hpp
group-5/Week07_Vector/test/: vector_test.cpp
group-5/Week08_PointersToObjects/: README.md
group-5/Week08_PointersToObjects/map/: map.cpp
group-5/Week08_PointersToObjects/src/: main.cpp  phone_number.hpp  register.hpp
group-5/Week09_Inheritance/: main.cpp  task.md
group-5/Week09_Inheritance/game/: creature.cpp  creature.h  main.cpp  monster.cpp  monster.h  player.cpp  player.h
group-5/Week10_Inheritance2/: lection_code.cpp
group-5/Week10_Inheritance2/multiple_inheritance/: employee.h  main.cpp  member_list.h  person.cpp  person.h  student.cpp  student.h  student_employee.h
lectures/2025-02-24/: CMakeLists.txt  library.cpp  library.h  main.cpp
lectures/2025-03-24-streams/: CMakeLists.txt  inventory.cpp  inventory.txt  long-input.cpp  numbers.cpp  numbers.txt  words.cpp
lectures/2025-04-14-dynamic-array/src/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h
lectures/2025-04-14-dynamic-array/test/: CMakeLists.txt  test_dynamic_array.cpp
lectures/2025-05-19-polymorphism/: .clang-format  CMakeLists.txt  main.cpp
pract-5/Week00-Recap/snippets/: 01-references.cpp  03-pointers.cpp  04-dynamicMemory.cpp
pract-5/Week01-StructsEnums/lab/: README.md
pract-5/Week02-FilesUnitTests/: README.md
pract-5/Week07-ClassesRecap/: README.md
pract-6/week1&2/: readme.md
pract-6/week11/: readme.md
pract-6/week13/: README.md
pract-6/week3/: readme.md
pract-6/week3/classwork/: Person.cpp  (+1 more)
pract-6/week4/: README.md
pract-6/week5/: readme.md
pract-6/week5/solutions/tests/: CMakeLists.txt  test.cpp
pract-6/week6/: readme.md
pract-6/week7/: readme.md
pract-6/week8/: readme.md
pract-6/week_13/: README.md
pract-6/week_14/: readme.md
pract-8/: README.md
pract-8/inheritance/: README.md
pract-8/polymorphism/: README.md
pract-8/templates/: README.md
pract-8/week01-introduction-to-oop/: README.md
pract-8/week02-encapsulation-access-modifiers/: README.md
pract-8/week03-constructors-destructors-rule-of-3/: README.md
pract-8/week04-unit-testing/: README.md
pract-8/week05-friend-keyword-operator-overloading/: README.md
pract-8/week06-files-classes/: README.md
pract-8/week06-files-classes/snippets/: CMakeLists.txt  Person.cpp  Person.hpp  main.cpp
pract-8/week07-static/: README.md
pract-8/week08-exam-prep/: README.md
pract-8/week08-exam-prep/solutions/: CMakeLists.txt  Drone.cpp  Drone.hpp  DroneShow.cpp  DroneShow.hpp  Point.hpp  dronesPath.txt  main.cpp
(+88 files in other folders)
